tests/sema/ok/04_pure_ok.sg
@pure fn add(a:int, b:int) -> int { return a + b; }

let xs:int[] = [1,2,3];
parallel map add [1,2,3];

let a:int = 0;
signal s = 0;
a := add(1, 2);     // RHS is pure
