tests/sema/bad/27_string_plus_int.sg
fn cat() -> string {
  let s:string = "hi";
  let x:int = 1;
  return s + x;
}
